Name error fixed
When a player connected the ADD_ENTITY it received contained an incorrect name (last letter was cut off) due incorrect offsets in static/message.js. Also I made some other improvements but they are pretty small and I think not very worth to be mentioned.

--- a/static/layout.css
+++ b/static/layout.css
@@ -33,7 +33,6 @@
 	}
 	#gui-chat {
 		left: 12px;
-		font-size: 0.75em;
 		top: 107px;
 		width: 250px;
 		height: calc(100vh - 4vh - 205px);
@@ -45,7 +44,7 @@
 		/* right attribute needs to be reset, otherwise div would be stretched all over the screen, eventhough this isn't
 		visible to the viewer, it prevents from shooting in case the mouse cursor is over the div's area */
 	}
-	#settings-button, #info-button {
+	#info-button {
 		display: none;
 	}
 	#menu-box {
